<resources>
    <string name="app_name">ShoppingList2</string>
    <string name="bought">Bought</string>
    <string name="products_list_title">Products List</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="add_delete">Add/Delete</string>
    <string name="preferences">Preferences</string>
    <string name="insert_text">Insert Text</string>
    <string name="product_activity">Shopping List</string>
    <string name="hello_text">Hello!</string>
    <string name="button_size">Button Size</string>
    <string name="green">green</string>
    <string name="red">red</string>
    <string name="save">Save</string>
    <string name="text_size">Text size</string>
    <string name="studentInsertion">StudentInsertion</string>
    <string name="productInsertion">ProductInsertion</string>
    <string name="title_activity_maps">Map</string>
    <string name="map">Map</string>
    <string name="description">Description</string>
    <string name="radius">Radius</string>
    <string name="store_name">Store Name</string>
    <string name="stores_list_title">Stores List</string>
    <string name="store_list">Stores</string>
    <string name="channelID">channelID</string>
    <string name="channelName">channelName</string>
    <string name="appwidget_text">Hello!</string>
    <string name="add_widget">Add widget</string>
    <string name="action1">com.example.shoppinglist2.action1</string>
    <string name="guinea_pig">Guinea pig</string>
    <string name="imageAction">Image Action</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="next">Next</string>
    <string name="audio">Audio</string>
    <string name="playAction">Play Action</string>
    <string name="pauseAction">pauseAction</string>
    <string name="nextAction">Next Action</string>
    <string name="stop">Stop</string>
    <string name="stopAction">Stop Action</string>
</resources>